# speech_assignment_2

./: .env.example  .gitignore  PROJECT_LAYOUT.md  README.md  impl_note.md  pyproject.toml
report/: main.bib  main.tex  preamble.tex
report/results/: report_macros.tex
stage1_lid/checkpoints/: lid_clip_adapt_clean_v2_history.json
stage1_lid/manifests/: gemini_lid_spans_original.csv  heldout_split_summary.json  lecture_sources.csv  spans_clean_split.csv  utterances.csv  utterances_clean_split.csv
stage1_lid/scripts/: download_lexmodi_original_clip.sh  prepare_lid_lecture_data.py
stage1_preprocess/scripts/: run_preprocess_manifest.py
stage1_preprocess/src/: preprocess_audio.py
stage1_stt/domain/: custom_terms.txt
stage1_stt/reference/: gemini_pro_spans_clean.csv
stage1_stt/scripts/: score_wer.py  transcribe_whisper_chunked.py  transcribe_whisper_oracle_spans.py
stage1_stt/src/: constrained_decoder.py
stage1_stt/stt/: whisper_large_v3_oracle_spans_clean_lexmodi_10m.csv  whisper_large_v3_oracle_spans_clean_lexmodi_10m.hyp.txt  whisper_large_v3_oracle_spans_clean_lexmodi_10m.postprocessed_metrics.json
stage2_ipa/data/: english_overrides_ipa.json  roman_hindi_overrides_ipa.json  technical_lexicon_ipa.json
stage2_ipa/ipa/: whisper_large_v3_oracle_spans_clean_lexmodi_10m.ipa.debug.json  whisper_large_v3_oracle_spans_clean_lexmodi_10m.ipa.txt
stage2_ipa/scripts/: convert_transcript_txt_to_ipa.py
stage2_ipa/src/: hinglish_ipa.py
stage2_translation/dictionary/: maithili_parallel_candidates_500.csv  maithili_parallel_dictionary_500.csv
(+49 files in other folders)
