[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-understanding"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchaudio",
  "numpy",
  "scipy",
  "pandas",
  "pyyaml",
  "tqdm",
  "soundfile",
  "librosa",
  "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
